fastapitest/app_environments/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    # optional allow max file upload size 100M
    # nginx.ingress.kubernetes.io/client-body-buffer-size: 100M
    # nginx.ingress.kubernetes.io/proxy-body-size: 100M
spec:
  rules:
    - host: noctsol.dev.com
      http:
        paths:
          - backend:
              service:
                name: dev-fastapitest-service
                port:
                  number: 49152
            path: /
            pathType: "Prefix"
  # tls:
  #   - hosts:
  #       - noctsol.dev.com
  #     secretName: noctsol-cert-tls
